--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>FFR | Portfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -20,14 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">FFR</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +77,13 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is Fahmi Fauzi Rahman</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            Your friendly neighborhood full stack developer, PHP and JavaScript
+            engineer specialists. I spend my days (and often nights) writing
+            lines of codes crafting on my web PROJECTS, turning ideas into
+            immersive, excellent interactive user experiences.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -98,7 +92,10 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://www.linkedin.com/in/fahmi-fauzi-rahman/"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -107,7 +104,10 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://github.com/ffrz/"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,7 +116,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://x.com/ffr_2023" class="home-hero__social-icon-link">
             <img
               src="./assets/png/twitter-ico.png"
               alt="icon"
@@ -125,7 +125,10 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a
+            href="https://www.youtube.com/@hobi_coding"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/yt-ico.png"
               alt="icon"
@@ -135,7 +138,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/fahmi.fauzi.rahman/"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -155,8 +158,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you will find more information about me, what I do, and my
+            current skills mostly in terms of programming and technology
           </span>
         </h2>
         <div class="about__content">
@@ -165,9 +168,9 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                <strong>Fahmi Fauzi Rahman</strong>
+                and I'm a <strong> Fullstack Web Developer </strong> located in
+                Majalengka. I've done
                 <strong> remote </strong>
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
@@ -188,18 +191,21 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
+              <div class="skills__skill">PHP</div>
+              <div class="skills__skill">MySQL</div>
+              <div class="skills__skill">Laravel</div>
+              <div class="skills__skill">Code Igniter</div>
+              <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Type Script</div>
+              <div class="skills__skill">Vue</div>
+              <div class="skills__skill">React</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
               <div class="skills__skill">SASS</div>
               <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">C++</div>
+              <div class="skills__skill">Qt C++</div>
+              <div class="skills__skill">Linux</div>
             </div>
           </div>
         </div>
@@ -210,8 +216,8 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you will find some of the personal and clients projects that I
+            created with each project containing its own case study
           </span>
         </h2>
 
@@ -219,18 +225,17 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/project-1.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Wifiku Billing</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Wifiku Billing is an bill automation system suitable for local
+                Internet Service Provider such as RT/RW Net.
               </p>
               <a
                 href="./project-1.html"
@@ -296,8 +301,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Feel free to Contact me by submitting the form below and I will get
+            back to you as soon as possible.
           </span>
         </h2>
         <div class="contact__form-container">
@@ -389,19 +394,20 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Fahmi Fauzi Rahman</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A Fullstack Web Developer building the Frontend and Backend of
+              Websites and Web Applications that leads to the success of the
+              overall product.
             </p>
           </div>
         </div>
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+          &copy; Copyright 2024. Made by
+          <a rel="noreferrer" target="_blank" href="https://ffr.shiftech.my.id"
+            >Fahmi Fauzi Rahman</a
           >
         </div>
       </div>
