--- a/project-1.html
+++ b/project-1.html
@@ -20,14 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">FFR</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,7 +77,7 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 1</h1>
+        <h1 class="heading-primary">Wifiku Billing</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
@@ -93,7 +86,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://wifiku-billing.shiftapps.my.id" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -102,7 +95,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/jpeg/project-1.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
