--- a/index.html
+++ b/index.html
@@ -216,8 +216,15 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Here you will find some of the personal and clients projects that I
-            created with each project containing its own case study
+            Here you will find some of the personal projects that I created with
+            each project containing its own case study. But you can also find more
+            projects on my
+            <a
+              style="text-decoration: underline;color:#08ce"
+              href="https://github.com/ffrz"
+              target="_blank"
+              >github repositories</a
+            >.
           </span>
         </h2>
 
@@ -234,17 +241,21 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Wifiku Billing</h3>
               <p class="projects__row-content-desc">
-                Wifiku Billing is an bill automation system suitable for local
-                Internet Service Provider such as RT/RW Net.
+                Designed and implemented an internet billing system using
+                Laravel that handles user authentication, session management,
+                and payment processing. The system allows business owner to
+                manage their customer accounts, billing and payments seamlessly
+                through a web-based interface.
               </p>
               <a
-                href="./project-1.html"
+                href="https://github.com/ffrz/wifiku-billing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Github Repo</a
               >
             </div>
           </div>
+
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -255,20 +266,23 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Shiftech POS</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Developed a point-of-sale (POS) system designed for retail
+                environments, using Laravel for backend processing and database
+                management. The system includes features for inventory tracking,
+                transaction processing, and sales reporting, providing a
+                seamless interface for store management and customer checkout.
               </p>
               <a
-                href="./project-2.html"
+                href="https://github.com/ffrz/wifiku-billing"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Github Repo</a
               >
             </div>
           </div>
+
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -279,17 +293,20 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">
+                Shifnet Billing System
+              </h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Developed a client-server billing system using C++, designed for
+                managing automated billing and payment processing for internet
+                rental services. Integrated real-time data usage monitoring and
+                customer management features.
               </p>
               <a
-                href="./project-3.html"
+                href="https://github.com/ffrz/shiftnet-billing-server"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Github Repo</a
               >
             </div>
           </div>
@@ -356,35 +373,51 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/fahmi-fauzi-rahman/"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://github.com/ffrz/"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://x.com/ffr_2023">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.youtube.com/@hobi_coding"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.instagram.com/fahmi.fauzi.rahman/"
+              >
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
