fix content, added google analytics

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-894GVNEMTB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-894GVNEMTB");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FFR | Portfolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
-
+    <meta name="description" content="Free Web tutorials" />
+    <meta name="keywords" content="programmer, software developer, fullstack engineer, c++ developer, programmer majalengka" />
+    <meta name="author" content="Fahmi Fauzi Rahman" />
+    <meta
+      name="description"
+      content="Fahmi Fauzi Rahman is an experienced FullStack Developer, C++ Engineer, Software Enthusiast from Majalengka, West Java, Indonesia."
+    />
     <link rel="stylesheet" href="css/style.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -77,7 +93,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Fahmi Fauzi Rahman</h1>
+        <h1 class="heading-primary">Hey, My name is Fahmi</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Your friendly neighborhood full stack developer, PHP and JavaScript
@@ -159,7 +175,7 @@
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
             Here you will find more information about me, what I do, and my
-            current skills mostly in terms of programming and technology
+            current skills mostly in terms of programming and technology.
           </span>
         </h2>
         <div class="about__content">
@@ -180,8 +196,7 @@
               <p class="about__content-details-para">
                 I'm a bit of a digital product junky. Over the years, I've used
                 hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                verticals. Feel free to <strong>contact</strong> me here.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -217,10 +232,10 @@
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
             Here you will find some of the personal projects that I created with
-            each project containing its own case study. But you can also find more
-            projects on my
+            each project containing its own case study. But you can also find
+            more projects on my
             <a
-              style="text-decoration: underline;color:#08ce"
+              style="text-decoration: underline; color: #08ce"
               href="https://github.com/ffrz"
               target="_blank"
               >github repositories</a
