--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>FFR | Portfolio</title>
     <meta name="description" content="Free Web tutorials" />
-    <meta name="keywords" content="programmer, software developer, fullstack engineer, c++ developer, programmer majalengka" />
+    <meta name="keywords" content="programmer, software developer, fullstack engineer, c++ developer, programmer majalengka, fahmi fauzi rahman, freelance programmer majalengka" />
     <meta name="author" content="Fahmi Fauzi Rahman" />
     <meta
       name="description"
